newtype-tools/tests/trybuild/newtype-nested-name-value.rs
#[derive(newtype_tools::Newtype)]
#[newtype(from = Oranges)]
struct Oranges(u32);

fn main() {}
